feat(plugin): authorizing a login request